--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
 	"dependencies": {
 		"@sendgrid/mail": "^6.3.1",
 		"bcryptjs": "^2.4.3",
+		"ccxt": "^1.18.466",
+		"chalk": "^2.4.2",
 		"express": "^4.16.4",
 		"jsonwebtoken": "^8.5.1",
+		"moment": "^2.24.0",
 		"mongodb": "^3.1.13",
 		"mongoose": "^5.4.19",
 		"multer": "^1.4.1",
