--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"@sendgrid/mail": "^6.3.1",
+		"bcryptjs": "^2.4.3",
 		"express": "^4.16.4",
 		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.24.0",
